@@ -27,7 +27,7 @@
     "id": 6,
     "title": "CrediTrust AI",
     "image": "6.jpg",
-    "description": "Credit acceptance prediction platform for PNC Fintech's AIS SCLC 2025 challenge.",
+    "description": "Credit acceptance prediction platform for PNC Bank's AIS SCLC 2025 challenge.",
     "role": "Solo Developer",
     "technologies": "C#, Javascript, html, css",
     "year": "2025",
