@@ -6,13 +6,10 @@
   padding: 20px;
 }
 
-/* Hero Section */
-.project-hero {
-  text-align: center;
-  margin-bottom: 50px;
-  padding: 40px 20px;
-  background-color: #f8f9fa;
-  border-radius: 12px;
+/* Option 1: Card-style with border */
+.project-hero.dark {
+  background: #111827;
+  border: 1px solid #374151;
 }
 
 .project-title {
@@ -463,10 +460,6 @@
   .features-grid,
   .role-content {
     grid-template-columns: 1fr;
-  }
-  
-  .project-hero {
-    padding: 30px 15px;
   }
   
   .project-cta {
