@@ -1,3 +1,11 @@
+-- V.20 -- 05/10/2025 --
+CrediTrust AI:
+    Subtitle fixed
+    Page added to reflect other cards
+
+Revenue Prediction App
+    Contact page removed
+
 -- V.19 -- 05/10/2025 --
 Freelance music page fixed. No AI hallucinations remain
 
